# vocrab

./: .gitignore  Cargo.toml  README.md  index.html  index.node  main.js  package-lock.json  package.json  preload.js  requirements.txt  tags
data/: emos-vs-punks.json  emos-vs-punks.txt  pourquoi-les-livres-papier.json  pourquoi-les-livres-papier.txt  rights-fr.json  rights-fr.txt
src/: lemmatizer.rs  lib.rs  main.rs  nlp_testbench.ipynb  tokenizer.py
