[package]
name = "vocrab"
version = "0.1.0"
authors = ["Christopher Leap"]
edition = "2018"
description = "Vocrab helps users create and review vocab-related flashcards."
readme = "README.md"
repository = "https://github.com/cleap/vocrab/"
license = "MIT OR Apache-2.0"
keywords = ["flashcards", "srs", "vocab"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
